solved registration problem + email and username checks before registration implemented

--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -56,5 +56,7 @@
     "registration.email": "Email",
     "registration.password": "Passwort",
     "registration.register_button": "Registrieren",
-    "registration.email_confirmation_message": "Die Bestätigungsemail wurde gesendet. Bitte überprüfe deinen Posteingang."
+    "registration.email_confirmation_message": "Die Bestätigungsemail wurde gesendet. Bitte überprüfe deinen Posteingang.",
+    "registration.already_have_account": "Email bereits vergeben. Hast du bereits ein Konto?",
+    "registration.username_taken": "Benutzername bereits vergeben."
 }
