--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -57,4 +57,7 @@
     "registration.password": "Wachtwoord",
     "registration.register_button": "Registreren",
     "registration.email_confirmation_message": "De bevestigingsmail is verzonden. Controleer je inbox."
+    ,
+    "registration.already_have_account": "E-mail al in gebruik. Heb je al een account?",
+    "registration.username_taken": "Gebruikersnaam al in gebruik."
 }
