--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -58,5 +58,12 @@
     "registration.register_button": "Registrieren",
     "registration.email_confirmation_message": "Die Bestätigungsemail wurde gesendet. Bitte überprüfe deinen Posteingang.",
     "registration.already_have_account": "Email bereits vergeben. Hast du bereits ein Konto?",
-    "registration.username_taken": "Benutzername bereits vergeben."
+    "registration.username_taken": "Benutzername bereits vergeben.",
+
+    "login.title": "Anmelden",
+    "login.email": "E-Mail",
+    "login.password": "Passwort",
+    "login.button": "Einloggen",
+    "login.error": "Anmeldung fehlgeschlagen. Bitte überprüfe deine Zugangsdaten.",
+    "login.success": "Erfolgreich angemeldet!"
 }
