--- a/muensterdiscovery/src/i18n/es.json
+++ b/muensterdiscovery/src/i18n/es.json
@@ -59,5 +59,12 @@
     "registration.email_confirmation_message": "Se ha enviado el correo de confirmación. Por favor revisa tu bandeja de entrada."
     ,
     "registration.already_have_account": "El correo electrónico ya está en uso. ¿Ya tienes una cuenta?",
-    "registration.username_taken": "Nombre de usuario ya en uso."
+    "registration.username_taken": "Nombre de usuario ya en uso.",
+
+    "login.title": "Iniciar sesión",
+    "login.email": "Correo electrónico",
+    "login.password": "Contraseña",
+    "login.button": "Entrar",
+    "login.error": "Error al iniciar sesión. Por favor, verifica tus credenciales.",
+    "login.success": "¡Sesión iniciada con éxito!"
 }
