--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -56,5 +56,12 @@
     "registration.email": "E-posta",
     "registration.password": "Parola",
     "registration.register_button": "Kayıt Ol",
-    "registration.email_confirmation_message": "Onay e-postası gönderildi. Lütfen gelen kutunuzu kontrol edin."
+    "registration.email_confirmation_message": "Onay e-postası gönderildi. Lütfen gelen kutunuzu kontrol edin.",
+
+    "login.title": "Giriş Yap",
+    "login.email": "E-posta",
+    "login.password": "Parola",
+    "login.button": "Giriş",
+    "login.error": "Giriş başarısız. Lütfen bilgilerinizi kontrol edin.",
+    "login.success": "Başarıyla giriş yaptınız!"
 }
