--- a/muensterdiscovery/src/i18n/es.json
+++ b/muensterdiscovery/src/i18n/es.json
@@ -66,5 +66,7 @@
     "login.password": "Contraseña",
     "login.button": "Entrar",
     "login.error": "Error al iniciar sesión. Por favor, verifica tus credenciales.",
-    "login.success": "¡Sesión iniciada con éxito!"
+    "login.success": "¡Sesión iniciada con éxito!",
+
+    "leaderboard.you": "TÚ"
 }
