--- a/muensterdiscovery/src/i18n/pt.json
+++ b/muensterdiscovery/src/i18n/pt.json
@@ -66,5 +66,7 @@
     "login.password": "Senha",
     "login.button": "Entrar",
     "login.error": "Falha no login. Por favor, verifique suas credenciais.",
-    "login.success": "Login realizado com sucesso!"
+    "login.success": "Login realizado com sucesso!",
+
+    "leaderboard.you": "VOCÊ"
 }
