--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -65,5 +65,7 @@
     "login.password": "Passwort",
     "login.button": "Einloggen",
     "login.error": "Anmeldung fehlgeschlagen. Bitte überprüfe deine Zugangsdaten.",
-    "login.success": "Erfolgreich angemeldet!"
+    "login.success": "Erfolgreich angemeldet!",
+
+    "leaderboard.you": "DU"
 }
