profile page edited and languages added

--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -58,5 +58,10 @@
     "registration.register_button": "Registrieren",
     "registration.email_confirmation_message": "Die Bestätigungsemail wurde gesendet. Bitte überprüfe deinen Posteingang.",
     "registration.already_have_account": "Email bereits vergeben. Hast du bereits ein Konto?",
-    "registration.username_taken": "Benutzername bereits vergeben."
+    "registration.username_taken": "Benutzername bereits vergeben.",
+
+    "login.title": "Willkommen zurück!",
+    "login.email": "Email",
+    "login.password": "Passwort",
+    "login.button": "Anmelden"
 }
