--- a/muensterdiscovery/src/i18n/pl.json
+++ b/muensterdiscovery/src/i18n/pl.json
@@ -59,5 +59,10 @@
     "registration.email_confirmation_message": "Wiadomość potwierdzająca została wysłana. Sprawdź swoją skrzynkę odbiorczą."
     ,
     "registration.already_have_account": "Adres e-mail jest już zajęty. Czy masz już konto?",
-    "registration.username_taken": "Nazwa użytkownika jest już zajęta."
+    "registration.username_taken": "Nazwa użytkownika jest już zajęta.",
+
+    "login.title": "Witamy ponownie!",
+    "login.email": "Email",
+    "login.password": "Hasło",
+    "login.button": "Zaloguj się"
 }
