--- a/muensterdiscovery/src/i18n/pt.json
+++ b/muensterdiscovery/src/i18n/pt.json
@@ -59,5 +59,10 @@
     "registration.email_confirmation_message": "O e-mail de confirmação foi enviado. Verifique sua caixa de entrada."
     ,
     "registration.already_have_account": "O e-mail já está em uso. Já tem uma conta?",
-    "registration.username_taken": "Nome de usuário já existe."
+    "registration.username_taken": "Nome de usuário já existe.",
+
+    "login.title": "Bem-vindo de volta!",
+    "login.email": "E-mail",
+    "login.password": "Senha",
+    "login.button": "Entrar"
 }
