--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -56,5 +56,13 @@
     "registration.email": "E-posta",
     "registration.password": "Parola",
     "registration.register_button": "Kayıt Ol",
-    "registration.email_confirmation_message": "Onay e-postası gönderildi. Lütfen gelen kutunuzu kontrol edin."
+    "registration.email_confirmation_message": "Onay e-postası gönderildi. Lütfen gelen kutunuzu kontrol edin.",
+
+    "registration.already_have_account": "E-posta zaten kullanımda. Zaten bir hesabın var mı?",
+    "registration.username_taken": "Kullanıcı adı zaten alınmış.",
+
+    "login.title": "Tekrar hoş geldiniz!",
+    "login.email": "E-posta",
+    "login.password": "Parola",
+    "login.button": "Giriş Yap"
 }
