--- a/muensterdiscovery/src/i18n/en.json
+++ b/muensterdiscovery/src/i18n/en.json
@@ -59,5 +59,10 @@
     "registration.email_confirmation_message": "Confirmation email sent. Please check your inbox."
     ,
     "registration.already_have_account": "Email already in use. Do you already have an account?",
-    "registration.username_taken": "Username already taken."
+    "registration.username_taken": "Username already taken.",
+
+    "login.title": "Welcome back!",
+    "login.email": "Email",
+    "login.password": "Password",
+    "login.button": "Login"
 }
