--- a/muensterdiscovery/src/i18n/jp.json
+++ b/muensterdiscovery/src/i18n/jp.json
@@ -59,5 +59,10 @@
     "registration.email_confirmation_message": "確認メールが送信されました。受信トレイを確認してください。"
     ,
     "registration.already_have_account": "メールアドレスは既に使用されています。既にアカウントをお持ちですか？",
-    "registration.username_taken": "ユーザー名は既に使用されています。"
+    "registration.username_taken": "ユーザー名は既に使用されています。",
+
+    "login.title": "おかえりなさい！",
+    "login.email": "メールアドレス",
+    "login.password": "パスワード",
+    "login.button": "ログイン"
 }
