--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -59,5 +59,10 @@
     "registration.email_confirmation_message": "De bevestigingsmail is verzonden. Controleer je inbox."
     ,
     "registration.already_have_account": "E-mail al in gebruik. Heb je al een account?",
-    "registration.username_taken": "Gebruikersnaam al in gebruik."
+    "registration.username_taken": "Gebruikersnaam al in gebruik.",
+
+    "login.title": "Welkom terug!",
+    "login.email": "E-mail",
+    "login.password": "Wachtwoord",
+    "login.button": "Inloggen"
 }
