--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "Route mit mehr als 5 km abgeschlossen",
     "profile.achievement3_title": "Weihnachtsmarkt-Fan",
     "profile.achievement3_desc": "Alle Weihnachtsmärkte besucht",
+    "profile.invalid_image": "Bitte wähle eine gültige Bilddatei aus.",
 
     "leaderboard.title": "Rangliste",
     "leaderboard.subtitle": "Wer hat Münster am besten erkundet?",
