--- a/muensterdiscovery/src/i18n/en.json
+++ b/muensterdiscovery/src/i18n/en.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "Completed route with more than 5 km",
     "profile.achievement3_title": "Christmas Market Fan",
     "profile.achievement3_desc": "Visited all Christmas markets",
+    "profile.invalid_image": "Please select a valid image file.",
 
     "leaderboard.title": "Leaderboard",
     "leaderboard.subtitle": "Who explored Münster best?",
