--- a/muensterdiscovery/src/i18n/es.json
+++ b/muensterdiscovery/src/i18n/es.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "Ruta de más de 5 km completada",
     "profile.achievement3_title": "Fan del mercado navideño",
     "profile.achievement3_desc": "Todos los mercados navideños visitados",
+    "profile.invalid_image": "Por favor selecciona un archivo de imagen válido.",
 
     "leaderboard.title": "Clasificación",
     "leaderboard.subtitle": "¿Quién ha explorado Münster mejor?",
