--- a/muensterdiscovery/src/i18n/fr.json
+++ b/muensterdiscovery/src/i18n/fr.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "Parcours de plus de 5 km terminé",
     "profile.achievement3_title": "Fan de marché de Noël",
     "profile.achievement3_desc": "Tous les marchés de Noël visités",
+    "profile.invalid_image": "Veuillez sélectionner un fichier image valide.",
 
     "leaderboard.title": "Classement",
     "leaderboard.subtitle": "Qui a le mieux exploré Münster ?",
