--- a/muensterdiscovery/src/i18n/it.json
+++ b/muensterdiscovery/src/i18n/it.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "Percorso di oltre 5 km completato",
     "profile.achievement3_title": "Fan dei mercatini di Natale",
     "profile.achievement3_desc": "Tutti i mercatini di Natale visitati",
+    "profile.invalid_image": "Seleziona un file immagine valido.",
 
     "leaderboard.title": "Classifica",
     "leaderboard.subtitle": "Chi ha esplorato meglio Münster?",
