--- a/muensterdiscovery/src/i18n/jp.json
+++ b/muensterdiscovery/src/i18n/jp.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "5km以上のルートを完了",
     "profile.achievement3_title": "クリスマスマーケットファン",
     "profile.achievement3_desc": "すべてのクリスマスマーケットを訪問",
+    "profile.invalid_image": "有効な画像ファイルを選択してください。",
 
     "leaderboard.title": "ランキング",
     "leaderboard.subtitle": "誰がミュンスターを最もよく探検しましたか？",
