--- a/muensterdiscovery/src/i18n/pl.json
+++ b/muensterdiscovery/src/i18n/pl.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "Ukończono trasę dłuższą niż 5 km",
     "profile.achievement3_title": "Fan jarmarków bożonarodzeniowych",
     "profile.achievement3_desc": "Odwiedzono wszystkie jarmarki bożonarodzeniowe",
+    "profile.invalid_image": "Proszę wybrać prawidłowy plik obrazu.",
 
     "leaderboard.title": "Ranking",
     "leaderboard.subtitle": "Kto najlepiej odkrył Münster?",
