--- a/muensterdiscovery/src/i18n/pt.json
+++ b/muensterdiscovery/src/i18n/pt.json
@@ -37,6 +37,7 @@
     "profile.achievement2_desc": "Rota com mais de 5 km concluída",
     "profile.achievement3_title": "Fã de mercados de Natal",
     "profile.achievement3_desc": "Todos os mercados de Natal visitados",
+    "profile.invalid_image": "Por favor selecione um arquivo de imagem válido.",
 
     "leaderboard.title": "Classificação",
     "leaderboard.subtitle": "Quem explorou Münster melhor?",
