--- a/muensterdiscovery/src/i18n/ru.json
+++ b/muensterdiscovery/src/i18n/ru.json
@@ -36,6 +36,7 @@
     "profile.achievement2_desc": "Завершен маршрут более 5 км",
     "profile.achievement3_title": "Фанат рождественских рынков",
     "profile.achievement3_desc": "Посещены все рождественские рынки",
+    "profile.invalid_image": "Пожалуйста, выберите корректный файл изображения.",
 
     "leaderboard.title": "Таблица лидеров",
     "leaderboard.subtitle": "Кто лучше всего исследовал Мюнстер?",
