--- a/muensterdiscovery/src/i18n/sa.json
+++ b/muensterdiscovery/src/i18n/sa.json
@@ -35,8 +35,9 @@
     "profile.achievement1_desc": "استكشاف 5 مناطق مختلفة",
     "profile.achievement2_title": "آلة التحمل",
     "profile.achievement2_desc": "إكمال مسار أكثر من 5 كم",
-    "profile.achievement3_title": "محب أسواق عيد الميلاد",
-    "profile.achievement3_desc": "زيارة جميع أسواق عيد الميلاد",
+    "profile.achievement3_title": "محب سوق عيد الميلاد",
+    "profile.achievement3_desc": "زار جميع أسواق عيد الميلاد",
+    "profile.invalid_image": "يرجى اختيار ملف صورة صالح.",
 
     "leaderboard.title": "قائمة المتصدرين",
     "leaderboard.subtitle": "من اكتشف مِنستر بشكل أفضل؟",
