--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -36,7 +36,8 @@
     "profile.achievement2_title": "Dayanıklılık makinesi",
     "profile.achievement2_desc": "5 km'den fazla rota tamamlandı",
     "profile.achievement3_title": "Noel pazarı hayranı",
-    "profile.achievement3_desc": "Tüm Noel pazarları ziyaret edildi",
+    "profile.achievement3_desc": "Tüm Noel pazarlarını ziyaret etti",
+    "profile.invalid_image": "Lütfen geçerli bir resim dosyası seçin.",
 
     "leaderboard.title": "Liderler Tablosu",
     "leaderboard.subtitle": "Münster'i en iyi kim keşfetti?",
