added POIs to OWM

--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -19,7 +19,7 @@
     "imprint.github_link_text": "GitHub Repository",
     "imprint.home_button": "Zurück zur Startseite",
 
-    "openworld.loading": "Lade Weihnachtsmärkte...",
+    "openworld.loading": "Lade Daten...",
     "openworld.more_info": "Weitere Informationen",
 
     "profile.greeting": "Hey, {username}!",
