--- a/muensterdiscovery/src/i18n/ru.json
+++ b/muensterdiscovery/src/i18n/ru.json
@@ -68,5 +68,17 @@
     "login.error": "Ошибка входа. Пожалуйста, проверьте свои данные.",
     "login.success": "Вход выполнен успешно!",
 
+    "start.slide1_title": "Слайд 1",
+    "start.slide1_content": "Содержание слайда 1",
+    "start.slide2_title": "Слайд 2",
+    "start.slide2_content": "Содержание слайда 2",
+    "start.slide3_title": "Слайд 3",
+    "start.slide3_content": "Содержание слайда 3",
+    "start.welcome_message": "Добро пожаловать обратно, {name}!",
+    "start.discover_message": "Откройте для себя самые интересные места и впечатления в Мюнстере.",
+    "start.tile": "Плитка {number}",
+    "start.add_content": "Добавьте свой контент здесь",
+    "footer.all_rights_reserved": "Все права защищены.",
+
     "leaderboard.you": "ВЫ"
 }
