Added routes from db to the route selection

--- a/muensterdiscovery/src/i18n/en.json
+++ b/muensterdiscovery/src/i18n/en.json
@@ -20,6 +20,7 @@
     "routeselection.duration": "Duration",
     "routeselection.pois": "POIs",
     "routeselection.close": "Close",
+    "routeselection.overview": "Route Overview",
     
     "imprint.title": "Imprint",
     "imprint.content": "This project is a student project as part of the Master's program in Geoinformatics and Spatial Data Science. Source code and documentation are available on GitHub:",
