--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -20,6 +20,7 @@
     "routeselection.duration": "Dauer",
     "routeselection.pois": "POIs",
     "routeselection.close": "Schließen",
+    "routeselection.overview": "Routenübersicht",
 
     "imprint.title": "Impressum",
     "imprint.content": "Dieses Projekt ist ein Studienprojekt im Rahmen des Masterstudiengangs Geoinformatics and Spatial Data Science der Universität Münster. Quellcode und Dokumentation sind auf GitHub verfügbar:",
